# C-SpaceGame

./: README.md
FinalAssignment/: Ammo.cpp  Ammo.h  Asteroids.cpp  Asteroids.h  CMakeLists.txt  CreateSpace.cpp  FinalAssignment.sln  FinalAssignment.vcxproj  FinalAssignment.vcxproj.filters  Ship1.cpp  Ship1.h  Space.cpp  Space.h  SpawnAmmo.cpp  SpawnShip1.cpp  TextureHolder.cpp  TextureHolder.h  player.cpp  player.h
FinalAssignment/Debug/: FinalAssignment.exe.recipe  FinalAssignment.ilk  FinalAssignment.vcxproj.FileListAbsolute.txt  space.obj.enc  vc143.idb
FinalAssignment/Debug/FinalAssignment.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  FinalAssignment.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
